# cookiecutter-data-science

./: .isort.cfg  .pre-commit-config.yaml  README.md  cookiecutter.json  see.py
hooks/: post_gen_project.sh  pre_gen_project.py  pre_gen_project.sh
{{ cookiecutter.repo_name }}/: .gitignore  .pydocstyle.ini  Dockerfile.develop  Dockerfile.train  Makefile  README.md  api.py  cli.py  pyproject.toml  setup.py  {{ cookiecutter.repo_name }}.py
{{ cookiecutter.repo_name }}/docker/: Dockerfile
{{ cookiecutter.repo_name }}/docs/: conf.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/data/: engineer.py
{{ cookiecutter.repo_name }}/workspaces/: WORKSPACE-TEMPLATE.Rmd  WORKSPACE-TEMPLATE.ipynb
