[tool.poetry]

name = "{{cookiecutter.repo_name}}"
version = "0.0.0"
description = "{{cookiecutter.description}}"

license = "MIT"

authors = ["{{cookiecutter.team_name}} <{{cookiecutter.point_of_contact}}>"]

readme = "README.md"

#homepage = "https://pypi.org/project/{{cookiecutter.repo_name}}"
#documentation = "https://{{cookiecutter.repo_name}}.readthedocs.io"

keywords = [
]
classifiers = [
    # TODO: update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]

[tool.poetry.dependencies]

#python = "^{{cookiecutter.python_interpreter}}"

# TODO: Remove these and add your library's requirements
click = "^6.0"
minilog = "~0.4"

[tool.poetry.dev-dependencies]

# Formatters
black = "=19.3b0"
isort = "=4.3.4"

# Linters
mypy = "*"
pydocstyle = "*"
pylint = "^2.0"

# Testing
pytest = "^4.3.1"
pytest-cov = "*"
pytest-describe = "*"
pytest-expecter = "*"
pytest-random = "*"
freezegun = "*"

# Reports
coveragespace = "*"

# Documentation
mkdocs = "^1.0"
pygments = "*"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }

[tool.poetry.scripts]

{{cookiecutter.repo_name}} = "{{cookiecutter.repo_name}}.cli:main"

[tool.black]

target-version = ["py36", "py37"]
skip-string-normalization = true

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
